# ton-connect

./: Cargo.toml  README.md  todo.md
examples/: custom-serde.rs  ton-connect-bridge.rs  tonconnect.rs  universal-link.rs
src/: crypto.rs  helpers.rs  lib.rs  link.rs  types.rs
