[package]
name = "ton-connect"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.2.0"
mime = "0.3.17"
base64 = "0.21.0"
crypto_box = "0.8.2"
url = "2.4.0"

[dev-dependencies]
eventsource = "0.5.0"
reqwest = { version = "0.11", features = ["blocking"] }

[[example]]
name = "ton-connect-bridge"
path = "examples/ton-connect-bridge.rs"
